<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/womanDesc"
        app:srcCompat="@drawable/loginbckrndedited" />



        <!--<Button-->
            <!--android:id="@+id/homeLogBTN"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Home" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:fontFamily="@font/sofiaregular"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_marginStart="120dp"
        android:textColor="@color/white"
        android:fontFamily="@font/robotoblack"
        android:textAlignment="center"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="180dp">

            <Button
                android:id="@+id/Login1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="120dp"
                android:textColor="@color/white"
                android:background="@color/yellow"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_marginStart="139dp"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>