<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/womanDesc"
        app:srcCompat="@drawable/loginbckrndedited" />



    <!--<Button-->
        <!--android:id="@+id/homeLogBTN"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Home" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:fontFamily="@font/sofiaregular"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:layout_marginStart="120dp"
            android:textColor="@color/white"
            android:fontFamily="@font/robotoblack"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="170dp"
            android:textColor="@color/white"
            android:fontFamily="@font/robotoblack"
            android:textAlignment="center"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/emailLayout">

                <TextView
                    android:id="@+id/logEmailTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaylight"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/logEmailET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/passwordLayout">

                <TextView
                    android:id="@+id/logPwordTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaylight"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/logPwordET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/white"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/Login2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="139dp"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notsigned"
                android:layout_marginStart="153dp"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"


                />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/blue"
                android:background="@color/white"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"
                android:id="@+id/loginPageRegBTN"
                android:layout_marginStart="148dp"
                android:textSize="10sp"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>