<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.caoimhemalone.amazonaws.softwareproject.Contacts">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:id="@+id/acDetailsLayout">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/nameLayout">

        <TextView
            android:id="@+id/acNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/acNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            />


    </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/numberLayout">

        <TextView
            android:id="@+id/acNumTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/acNumET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="text|number"
            />


    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/emailLayout">

            <TextView
                android:id="@+id/acEmailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="30dp"/>

            <EditText
                android:id="@+id/acEmailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/relationLayout">

            <TextView
                android:id="@+id/acRelTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relation"
                android:layout_marginLeft="30dp"/>

            <EditText
                android:id="@+id/acRelET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:ems="16"
                android:inputType="text"
                android:hint="@string/relationship"
                android:textSize="13sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rrankingLayout">

            <TextView
                android:id="@+id/acRankTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:layout_marginLeft="30dp"/>




        </LinearLayout>
    </LinearLayout>

</RelativeLayout>