<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000"
        >


        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:fontFamily="@font/sofiaregular"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/addUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addUser"
            android:layout_marginStart="160dp"
            android:textColor="@color/white"
            android:fontFamily="@font/robotoblack"
            android:textAlignment="center"
            android:layout_marginBottom="70dp"
            />


        //Name
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/nameLayout">

            <TextView
                android:id="@+id/auNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/auNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"

                />


        </LinearLayout>

        //Username
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/AddUserNsmeLayout">

            <TextView
                android:id="@+id/auUserNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/auUserNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                />
        </LinearLayout>


        //Number
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/numberLayout">

            <TextView
                android:id="@+id/auNumTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/ralewaylight"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/auNumET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="text|number"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                />


        </LinearLayout>




        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addUser2BTN"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:background="@color/yellow"
            android:layout_marginStart="290dp"
            android:layout_marginTop="90dp"
            android:onClick="registerBtnClick"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>